flashai DEV: matmul()

--- a/src/flashai/imflash217__01_matmul.ipynb
+++ b/src/flashai/imflash217__01_matmul.ipynb
@@ -91,10 +91,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
+    "#export\n",
     "from pathlib import Path\n",
     "from IPython.core.debugger import set_trace\n",
     "import gzip\n",
@@ -1596,7 +1597,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -1614,7 +1615,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -1642,7 +1643,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
