--- a/src/flashai/imflash217__01_matmul.ipynb
+++ b/src/flashai/imflash217__01_matmul.ipynb
@@ -1597,13 +1597,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "Converted imflash217__01_matmul.ipynb to exp/nb_01_matmul.py\r\n",
       "Converted imflash217__01_matmul.ipynb to exp/nb_01_matmul.py\r\n",
       "Converted imflash217__01_matmul.ipynb to exp/nb_01_matmul.py\r\n"
      ]
@@ -1615,7 +1616,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -1643,7 +1644,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -1671,17 +1672,32 @@
       "\u001b[38;5;238m  16\u001b[0m   \u001b[38;5;238m│\u001b[0m \u001b[38;2;166;226;46mdef\u001b[0m\u001b[38;2;248;248;242m \u001b[0m\u001b[38;2;166;226;46mtest_eq\u001b[0m\u001b[38;2;248;248;242m(\u001b[0m\u001b[38;2;253;151;31ma\u001b[0m\u001b[38;2;248;248;242m,\u001b[0m\u001b[38;2;253;151;31mb\u001b[0m\u001b[38;2;248;248;242m)\u001b[0m\u001b[38;2;248;248;242m:\u001b[0m\r\n",
       "\u001b[38;5;238m  17\u001b[0m   \u001b[38;5;238m│\u001b[0m \u001b[38;2;248;248;242m    \u001b[0m\u001b[38;2;248;248;242mtest\u001b[0m\u001b[38;2;248;248;242m(\u001b[0m\u001b[38;2;248;248;242ma\u001b[0m\u001b[38;2;248;248;242m,\u001b[0m\u001b[38;2;248;248;242m \u001b[0m\u001b[38;2;248;248;242mb\u001b[0m\u001b[38;2;248;248;242m,\u001b[0m\u001b[38;2;248;248;242m \u001b[0m\u001b[38;2;248;248;242moperator\u001b[0m\u001b[38;2;248;248;242m.\u001b[0m\u001b[38;2;248;248;242meq\u001b[0m\u001b[38;2;248;248;242m,\u001b[0m\u001b[38;2;248;248;242m \u001b[0m\u001b[38;2;230;219;116m\"\u001b[0m\u001b[38;2;230;219;116m==\u001b[0m\u001b[38;2;230;219;116m\"\u001b[0m\u001b[38;2;248;248;242m)\u001b[0m\r\n",
       "\u001b[38;5;238m  18\u001b[0m   \u001b[38;5;238m│\u001b[0m \r\n",
-      "\u001b[38;5;238m  19\u001b[0m   \u001b[38;5;238m│\u001b[0m \u001b[38;2;117;113;94m#\u001b[0m\u001b[38;2;117;113;94m## test whether the results from two methods are same or not\u001b[0m\r\n",
-      "\u001b[38;5;238m  20\u001b[0m   \u001b[38;5;238m│\u001b[0m \u001b[38;2;117;113;94m#\u001b[0m\u001b[38;2;117;113;94m## as its difficult to accurately achieve the same numbers due to floa\u001b[0m\r\n",
+      "\u001b[38;5;238m  19\u001b[0m \u001b[32m+\u001b[0m \u001b[38;5;238m│\u001b[0m \u001b[38;2;249;38;114mfrom\u001b[0m\u001b[38;2;248;248;242m \u001b[0m\u001b[38;2;248;248;242mpathlib\u001b[0m\u001b[38;2;248;248;242m \u001b[0m\u001b[38;2;249;38;114mimport\u001b[0m\u001b[38;2;248;248;242m \u001b[0m\u001b[38;2;248;248;242mPath\u001b[0m\r\n",
+      "\u001b[38;5;238m  20\u001b[0m \u001b[32m+\u001b[0m \u001b[38;5;238m│\u001b[0m \u001b[38;2;249;38;114mfrom\u001b[0m\u001b[38;2;248;248;242m \u001b[0m\u001b[38;2;248;248;242mIPython\u001b[0m\u001b[38;2;248;248;242m.\u001b[0m\u001b[38;2;248;248;242mcore\u001b[0m\u001b[38;2;248;248;242m.\u001b[0m\u001b[38;2;248;248;242mdebugger\u001b[0m\u001b[38;2;248;248;242m \u001b[0m\u001b[38;2;249;38;114mimport\u001b[0m\u001b[38;2;248;248;242m \u001b[0m\u001b[38;2;248;248;242mset_trace\u001b[0m\r\n",
+      "\u001b[38;5;238m  21\u001b[0m \u001b[32m+\u001b[0m \u001b[38;5;238m│\u001b[0m \u001b[38;2;249;38;114mimport\u001b[0m\u001b[38;2;248;248;242m \u001b[0m\u001b[38;2;248;248;242mgzip\u001b[0m\r\n",
+      "\u001b[38;5;238m  22\u001b[0m \u001b[32m+\u001b[0m \u001b[38;5;238m│\u001b[0m \r\n",
+      "\u001b[38;5;238m  23\u001b[0m \u001b[32m+\u001b[0m \u001b[38;5;238m│\u001b[0m \u001b[38;2;249;38;114mimport\u001b[0m\u001b[38;2;248;248;242m \u001b[0m\u001b[38;2;248;248;242mmatplotlib\u001b[0m\u001b[38;2;248;248;242m \u001b[0m\u001b[38;2;249;38;114mas\u001b[0m\u001b[38;2;248;248;242m \u001b[0m\u001b[38;2;248;248;242mmpl\u001b[0m\r\n",
+      "\u001b[38;5;238m  24\u001b[0m \u001b[32m+\u001b[0m \u001b[38;5;238m│\u001b[0m \u001b[38;2;249;38;114mimport\u001b[0m\u001b[38;2;248;248;242m \u001b[0m\u001b[38;2;248;248;242mmatplotlib\u001b[0m\u001b[38;2;248;248;242m.\u001b[0m\u001b[38;2;248;248;242mpyplot\u001b[0m\u001b[38;2;248;248;242m \u001b[0m\u001b[38;2;249;38;114mas\u001b[0m\u001b[38;2;248;248;242m \u001b[0m\u001b[38;2;248;248;242mplt\u001b[0m\r\n",
+      "\u001b[38;5;238m  25\u001b[0m \u001b[32m+\u001b[0m \u001b[38;5;238m│\u001b[0m \r\n",
+      "\u001b[38;5;238m  26\u001b[0m \u001b[32m+\u001b[0m \u001b[38;5;238m│\u001b[0m \u001b[38;2;249;38;114mimport\u001b[0m\u001b[38;2;248;248;242m \u001b[0m\u001b[38;2;248;248;242mpickle\u001b[0m\r\n",
+      "\u001b[38;5;238m  27\u001b[0m \u001b[32m+\u001b[0m \u001b[38;5;238m│\u001b[0m \u001b[38;2;249;38;114mimport\u001b[0m\u001b[38;2;248;248;242m \u001b[0m\u001b[38;2;248;248;242mmath\u001b[0m\r\n",
+      "\u001b[38;5;238m  28\u001b[0m \u001b[32m+\u001b[0m \u001b[38;5;238m│\u001b[0m \u001b[38;2;249;38;114mimport\u001b[0m\u001b[38;2;248;248;242m \u001b[0m\u001b[38;2;248;248;242mtorch\u001b[0m\r\n",
+      "\u001b[38;5;238m  29\u001b[0m \u001b[32m+\u001b[0m \u001b[38;5;238m│\u001b[0m \u001b[38;2;249;38;114mfrom\u001b[0m\u001b[38;2;248;248;242m \u001b[0m\u001b[38;2;248;248;242mfastai\u001b[0m\u001b[38;2;248;248;242m \u001b[0m\u001b[38;2;249;38;114mimport\u001b[0m\u001b[38;2;248;248;242m \u001b[0m\u001b[38;2;248;248;242mdatasets\u001b[0m\r\n",
+      "\u001b[38;5;238m  30\u001b[0m \u001b[32m+\u001b[0m \u001b[38;5;238m│\u001b[0m \r\n",
+      "\u001b[38;5;238m  31\u001b[0m \u001b[32m+\u001b[0m \u001b[38;5;238m│\u001b[0m \u001b[38;2;255;255;255mMNIST_URL\u001b[0m\u001b[38;2;248;248;242m \u001b[0m\u001b[38;2;249;38;114m=\u001b[0m\u001b[38;2;248;248;242m \u001b[0m\u001b[38;2;230;219;116m\"\u001b[0m\u001b[38;2;230;219;116mhttp://deeplearning.net/data/mnist/mnist.pkl\u001b[0m\u001b[38;2;230;219;116m\"\u001b[0m\r\n",
+      "\u001b[38;5;238m  32\u001b[0m \u001b[32m+\u001b[0m \u001b[38;5;238m│\u001b[0m \r\n",
+      "\u001b[38;5;238m  33\u001b[0m \u001b[32m+\u001b[0m \u001b[38;5;238m│\u001b[0m \r\n",
+      "\u001b[38;5;238m  34\u001b[0m   \u001b[38;5;238m│\u001b[0m \u001b[38;2;117;113;94m#\u001b[0m\u001b[38;2;117;113;94m## test whether the results from two methods are same or not\u001b[0m\r\n",
+      "\u001b[38;5;238m  35\u001b[0m   \u001b[38;5;238m│\u001b[0m \u001b[38;2;117;113;94m#\u001b[0m\u001b[38;2;117;113;94m## as its difficult to accurately achieve the same numbers due to floa\u001b[0m\r\n",
       "\u001b[38;5;238m    \u001b[0m   \u001b[38;5;238m│\u001b[0m \u001b[38;2;117;113;94mting-point operation\u001b[0m\r\n",
-      "\u001b[38;5;238m  21\u001b[0m   \u001b[38;5;238m│\u001b[0m \u001b[38;2;117;113;94m#\u001b[0m\u001b[38;2;117;113;94m## we will create a function to test whether two tensor (of same shape\u001b[0m\r\n",
+      "\u001b[38;5;238m  36\u001b[0m   \u001b[38;5;238m│\u001b[0m \u001b[38;2;117;113;94m#\u001b[0m\u001b[38;2;117;113;94m## we will create a function to test whether two tensor (of same shape\u001b[0m\r\n",
       "\u001b[38;5;238m    \u001b[0m   \u001b[38;5;238m│\u001b[0m \u001b[38;2;117;113;94m) are\u001b[0m\r\n",
-      "\u001b[38;5;238m  22\u001b[0m   \u001b[38;5;238m│\u001b[0m \u001b[38;2;117;113;94m#\u001b[0m\u001b[38;2;117;113;94m## APPROXIMATELY EQUAL withing some tolerance\u001b[0m\r\n",
-      "\u001b[38;5;238m  23\u001b[0m   \u001b[38;5;238m│\u001b[0m \r\n",
-      "\u001b[38;5;238m  24\u001b[0m   \u001b[38;5;238m│\u001b[0m \u001b[38;2;166;226;46mdef\u001b[0m\u001b[38;2;248;248;242m \u001b[0m\u001b[38;2;166;226;46mnear\u001b[0m\u001b[38;2;248;248;242m(\u001b[0m\u001b[38;2;253;151;31ma\u001b[0m\u001b[38;2;248;248;242m,\u001b[0m\u001b[38;2;248;248;242m \u001b[0m\u001b[38;2;253;151;31mb\u001b[0m\u001b[38;2;248;248;242m)\u001b[0m\u001b[38;2;248;248;242m:\u001b[0m\r\n",
-      "\u001b[38;5;238m  25\u001b[0m   \u001b[38;5;238m│\u001b[0m \u001b[38;2;248;248;242m    \u001b[0m\u001b[38;2;249;38;114mreturn\u001b[0m\u001b[38;2;248;248;242m \u001b[0m\u001b[38;2;248;248;242mtorch\u001b[0m\u001b[38;2;248;248;242m.\u001b[0m\u001b[38;2;248;248;242mallclose\u001b[0m\u001b[38;2;248;248;242m(\u001b[0m\u001b[38;2;253;151;31minput\u001b[0m\u001b[38;2;249;38;114m=\u001b[0m\u001b[38;2;248;248;242ma\u001b[0m\u001b[38;2;248;248;242m,\u001b[0m\u001b[38;2;248;248;242m \u001b[0m\u001b[38;2;253;151;31mother\u001b[0m\u001b[38;2;249;38;114m=\u001b[0m\u001b[38;2;248;248;242mb\u001b[0m\u001b[38;2;248;248;242m,\u001b[0m\u001b[38;2;248;248;242m \u001b[0m\u001b[38;2;253;151;31mrtol\u001b[0m\u001b[38;2;249;38;114m=\u001b[0m\u001b[38;2;190;132;255m1e-3\u001b[0m\u001b[38;2;248;248;242m,\u001b[0m\u001b[38;2;248;248;242m \u001b[0m\u001b[38;2;253;151;31matol\u001b[0m\u001b[38;2;249;38;114m=\u001b[0m\u001b[38;2;190;132;255m1e-5\u001b[0m\u001b[38;2;248;248;242m)\u001b[0m\r\n",
-      "\u001b[38;5;238m  26\u001b[0m   \u001b[38;5;238m│\u001b[0m \u001b[38;2;166;226;46mdef\u001b[0m\u001b[38;2;248;248;242m \u001b[0m\u001b[38;2;166;226;46mtest_near\u001b[0m\u001b[38;2;248;248;242m(\u001b[0m\u001b[38;2;253;151;31ma\u001b[0m\u001b[38;2;248;248;242m,\u001b[0m\u001b[38;2;248;248;242m \u001b[0m\u001b[38;2;253;151;31mb\u001b[0m\u001b[38;2;248;248;242m)\u001b[0m\u001b[38;2;248;248;242m:\u001b[0m\r\n",
-      "\u001b[38;5;238m  27\u001b[0m   \u001b[38;5;238m│\u001b[0m \u001b[38;2;248;248;242m    \u001b[0m\u001b[38;2;249;38;114mreturn\u001b[0m\u001b[38;2;248;248;242m \u001b[0m\u001b[38;2;248;248;242mtest\u001b[0m\u001b[38;2;248;248;242m(\u001b[0m\u001b[38;2;253;151;31ma\u001b[0m\u001b[38;2;249;38;114m=\u001b[0m\u001b[38;2;248;248;242ma\u001b[0m\u001b[38;2;248;248;242m,\u001b[0m\u001b[38;2;248;248;242m \u001b[0m\u001b[38;2;253;151;31mb\u001b[0m\u001b[38;2;249;38;114m=\u001b[0m\u001b[38;2;248;248;242mb\u001b[0m\u001b[38;2;248;248;242m,\u001b[0m\u001b[38;2;248;248;242m \u001b[0m\u001b[38;2;253;151;31mcmp\u001b[0m\u001b[38;2;249;38;114m=\u001b[0m\u001b[38;2;248;248;242mnear\u001b[0m\u001b[38;2;248;248;242m)\u001b[0m\r\n",
+      "\u001b[38;5;238m  37\u001b[0m   \u001b[38;5;238m│\u001b[0m \u001b[38;2;117;113;94m#\u001b[0m\u001b[38;2;117;113;94m## APPROXIMATELY EQUAL withing some tolerance\u001b[0m\r\n",
+      "\u001b[38;5;238m  38\u001b[0m   \u001b[38;5;238m│\u001b[0m \r\n",
+      "\u001b[38;5;238m  39\u001b[0m   \u001b[38;5;238m│\u001b[0m \u001b[38;2;166;226;46mdef\u001b[0m\u001b[38;2;248;248;242m \u001b[0m\u001b[38;2;166;226;46mnear\u001b[0m\u001b[38;2;248;248;242m(\u001b[0m\u001b[38;2;253;151;31ma\u001b[0m\u001b[38;2;248;248;242m,\u001b[0m\u001b[38;2;248;248;242m \u001b[0m\u001b[38;2;253;151;31mb\u001b[0m\u001b[38;2;248;248;242m)\u001b[0m\u001b[38;2;248;248;242m:\u001b[0m\r\n",
+      "\u001b[38;5;238m  40\u001b[0m   \u001b[38;5;238m│\u001b[0m \u001b[38;2;248;248;242m    \u001b[0m\u001b[38;2;249;38;114mreturn\u001b[0m\u001b[38;2;248;248;242m \u001b[0m\u001b[38;2;248;248;242mtorch\u001b[0m\u001b[38;2;248;248;242m.\u001b[0m\u001b[38;2;248;248;242mallclose\u001b[0m\u001b[38;2;248;248;242m(\u001b[0m\u001b[38;2;253;151;31minput\u001b[0m\u001b[38;2;249;38;114m=\u001b[0m\u001b[38;2;248;248;242ma\u001b[0m\u001b[38;2;248;248;242m,\u001b[0m\u001b[38;2;248;248;242m \u001b[0m\u001b[38;2;253;151;31mother\u001b[0m\u001b[38;2;249;38;114m=\u001b[0m\u001b[38;2;248;248;242mb\u001b[0m\u001b[38;2;248;248;242m,\u001b[0m\u001b[38;2;248;248;242m \u001b[0m\u001b[38;2;253;151;31mrtol\u001b[0m\u001b[38;2;249;38;114m=\u001b[0m\u001b[38;2;190;132;255m1e-3\u001b[0m\u001b[38;2;248;248;242m,\u001b[0m\u001b[38;2;248;248;242m \u001b[0m\u001b[38;2;253;151;31matol\u001b[0m\u001b[38;2;249;38;114m=\u001b[0m\u001b[38;2;190;132;255m1e-5\u001b[0m\u001b[38;2;248;248;242m)\u001b[0m\r\n",
+      "\u001b[38;5;238m  41\u001b[0m   \u001b[38;5;238m│\u001b[0m \u001b[38;2;166;226;46mdef\u001b[0m\u001b[38;2;248;248;242m \u001b[0m\u001b[38;2;166;226;46mtest_near\u001b[0m\u001b[38;2;248;248;242m(\u001b[0m\u001b[38;2;253;151;31ma\u001b[0m\u001b[38;2;248;248;242m,\u001b[0m\u001b[38;2;248;248;242m \u001b[0m\u001b[38;2;253;151;31mb\u001b[0m\u001b[38;2;248;248;242m)\u001b[0m\u001b[38;2;248;248;242m:\u001b[0m\r\n",
+      "\u001b[38;5;238m  42\u001b[0m   \u001b[38;5;238m│\u001b[0m \u001b[38;2;248;248;242m    \u001b[0m\u001b[38;2;249;38;114mreturn\u001b[0m\u001b[38;2;248;248;242m \u001b[0m\u001b[38;2;248;248;242mtest\u001b[0m\u001b[38;2;248;248;242m(\u001b[0m\u001b[38;2;253;151;31ma\u001b[0m\u001b[38;2;249;38;114m=\u001b[0m\u001b[38;2;248;248;242ma\u001b[0m\u001b[38;2;248;248;242m,\u001b[0m\u001b[38;2;248;248;242m \u001b[0m\u001b[38;2;253;151;31mb\u001b[0m\u001b[38;2;249;38;114m=\u001b[0m\u001b[38;2;248;248;242mb\u001b[0m\u001b[38;2;248;248;242m,\u001b[0m\u001b[38;2;248;248;242m \u001b[0m\u001b[38;2;253;151;31mcmp\u001b[0m\u001b[38;2;249;38;114m=\u001b[0m\u001b[38;2;248;248;242mnear\u001b[0m\u001b[38;2;248;248;242m)\u001b[0m\r\n",
       "\u001b[38;5;238m───────┴────────────────────────────────────────────────────────────────────────\u001b[0m\r\n"
      ]
     }
