--- a/src/flashai/imflash217__02_callbacks.ipynb
+++ b/src/flashai/imflash217__02_callbacks.ipynb
@@ -618,13 +618,361 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 191,
    "metadata": {},
    "outputs": [],
    "source": [
     "#export\n",
     "class Runner():\n",
-    "    "
+    "    def __init__(self, cbs=None, cb_funcs=None):\n",
+    "        cbs = listify(cbs)\n",
+    "        for cbf in listify(cb_funcs):\n",
+    "            cb = cbf()\n",
+    "            setattr(self, cb.name, cb)\n",
+    "            cbs.append(cb)\n",
+    "        self.stop = False\n",
+    "        self.cbs = cbs + [TrainEvalCallback()]\n",
+    "    \n",
+    "    @property\n",
+    "    def opt(self):       return self.learner.opt\n",
+    "    @property\n",
+    "    def model(self):     return self.learner.model\n",
+    "    @property\n",
+    "    def loss_func(self): return self.learner.loss_fn\n",
+    "    @property\n",
+    "    def data(self):      return self.learner.data\n",
+    "    \n",
+    "    def one_batch(self, xb, yb):\n",
+    "        self.xb = xb\n",
+    "        self.yb = yb\n",
+    "        if self(\"begin_batch\"):\n",
+    "            return\n",
+    "        self.pred = self.model(self.xb)\n",
+    "        if self(\"after_pred\"):\n",
+    "            return\n",
+    "        self.loss = self.loss_func(self.pred, self.yb)\n",
+    "        if self(\"after_loss\") or not self.in_train:\n",
+    "            return\n",
+    "        self.loss.backward()\n",
+    "        if self(\"after_backward\"):\n",
+    "            return\n",
+    "        self.opt.step()\n",
+    "        if self(\"after_step\"):\n",
+    "            return\n",
+    "        self.opt.zero_grad()\n",
+    "        \n",
+    "    def all_batches(self, dl):\n",
+    "        self.iters = len(dl)\n",
+    "        for xb, yb in dl:\n",
+    "            if self.stop:\n",
+    "                break\n",
+    "            self.one_batch(xb, yb)\n",
+    "            self(\"after_batch\")\n",
+    "        self.stop = False\n",
+    "        \n",
+    "    def fit(self, epochs, learner):\n",
+    "        self.epochs  = epochs\n",
+    "        self.learner = learner\n",
+    "        \n",
+    "        try:\n",
+    "            for cb in self.cbs:\n",
+    "                cb.set_runner(run=self)\n",
+    "            if self(\"begin_fit\"):\n",
+    "                return\n",
+    "            for epoch in range(self.epochs):\n",
+    "                self.epoch = epoch\n",
+    "                \n",
+    "                ### Training Phase\n",
+    "                if not self(\"begin_epoch\"):\n",
+    "                    self.all_batches(dl=self.data.train_dl)\n",
+    "                    \n",
+    "                ### Validation Phase\n",
+    "                with torch.no_grad():\n",
+    "                    if not self(\"begin_validate\"):\n",
+    "                        self.all_batches(dl=self.data.valid_dl)\n",
+    "                \n",
+    "                if self(\"after_epoch\"): break\n",
+    "                    \n",
+    "        finally:\n",
+    "            self(\"after_fit\")\n",
+    "            self.learner = None\n",
+    "        \n",
+    "    def __call__(self, cb_name):\n",
+    "        \"\"\"This is the code which also takes care of calling self(*)\"\"\"\n",
+    "        for cb in sorted(self.cbs, key=lambda x: x._order):\n",
+    "            f = getattr(cb, cb_name, None)                    ### equivalent to \"cb.cb_name\"; default is None\n",
+    "            if f and f():\n",
+    "                return True\n",
+    "        return False\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### We will also define a new `Callback` that calculates and stores the `metrics`"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 192,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#export\n",
+    "class AvgStats():\n",
+    "    def __init__(self, metrics, in_train):\n",
+    "        self.metrics  = listify(metrics)\n",
+    "        self.in_train = in_train\n",
+    "    \n",
+    "    def reset(self):\n",
+    "        self.tot_loss = 0.\n",
+    "        self.count    = 0\n",
+    "        self.tot_mets = [0.] * len(self.metrics)\n",
+    "        \n",
+    "    @property\n",
+    "    def all_stats(self):\n",
+    "        return [self.tot_loss.item()] + self.tot_mets      ### keeping loss at the begining\n",
+    "    \n",
+    "    @property\n",
+    "    def avg_stats(self):\n",
+    "        return [o/self.count for o in self.all_stats]\n",
+    "    \n",
+    "    def __repr__(self):\n",
+    "        if not self.count: \n",
+    "            return \"\"\n",
+    "        return f\"{'train: ' if self.in_train else 'valid: '}{self.avg_stats}\"\n",
+    "    \n",
+    "    def accumulate(self, run):\n",
+    "        bn = run.xb.shape[0]\n",
+    "        ### print(f\"bn={bn}\")\n",
+    "        self.tot_loss += run.loss * bn\n",
+    "        ### print(f\"run.loss, *bn = {run.loss}, {run.loss*bn}, self.tot_loss={self.tot_loss}\")\n",
+    "        self.count    += bn\n",
+    "        ### print(f\"bn={bn}, self.count={self.count}\")\n",
+    "        for i, m in enumerate(self.metrics):\n",
+    "            self.tot_mets[i] += m(run.pred, run.yb) * bn\n",
+    "                  "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 193,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#export\n",
+    "class AvgStatsCallback(Callback):\n",
+    "    def __init__(self, metrics):\n",
+    "        self.train_stats = AvgStats(metrics=metrics, in_train=True)\n",
+    "        self.valid_stats = AvgStats(metrics=metrics, in_train=False)\n",
+    "        \n",
+    "    def begin_epoch(self):\n",
+    "        self.train_stats.reset()\n",
+    "        self.valid_stats.reset()\n",
+    "        \n",
+    "    def after_loss(self):\n",
+    "        stats = self.train_stats if self.in_train else self.valid_stats\n",
+    "        with torch.no_grad():\n",
+    "            stats.accumulate(self.run)\n",
+    "    \n",
+    "    def after_epoch(self):\n",
+    "        print(f\"epoch=[{self.epoch+1}/{self.epochs}]:\\t\"\\\n",
+    "              f\"{self.train_stats}\\t\"\\\n",
+    "              f\"{self.valid_stats}\")        \n",
+    "        "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 194,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "learner = Learner(*get_model(data), loss_fn=loss_fn, data=data)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 195,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "stats_callback = AvgStatsCallback(metrics=[accuracy])\n",
+    "run = Runner(cbs=stats_callback)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 196,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "epoch=[1/10]:\ttrain: [0.352652265625, tensor(0.8952)]\tvalid: [0.19010003662109376, tensor(0.9476)]\n",
+      "epoch=[2/10]:\ttrain: [0.22287244140625, tensor(0.9384)]\tvalid: [0.2015393798828125, tensor(0.9490)]\n",
+      "epoch=[3/10]:\ttrain: [0.18968974609375, tensor(0.9483)]\tvalid: [0.17097882080078125, tensor(0.9548)]\n",
+      "epoch=[4/10]:\ttrain: [0.17522892578125, tensor(0.9527)]\tvalid: [0.2025575439453125, tensor(0.9510)]\n",
+      "epoch=[5/10]:\ttrain: [0.15616833984375, tensor(0.9576)]\tvalid: [0.18590245361328125, tensor(0.9590)]\n",
+      "epoch=[6/10]:\ttrain: [0.154144111328125, tensor(0.9591)]\tvalid: [0.1937948486328125, tensor(0.9512)]\n",
+      "epoch=[7/10]:\ttrain: [0.14499212890625, tensor(0.9618)]\tvalid: [0.2222896484375, tensor(0.9498)]\n",
+      "epoch=[8/10]:\ttrain: [0.141550615234375, tensor(0.9631)]\tvalid: [0.19589769287109374, tensor(0.9612)]\n",
+      "epoch=[9/10]:\ttrain: [0.132174140625, tensor(0.9656)]\tvalid: [0.178992431640625, tensor(0.9599)]\n",
+      "epoch=[10/10]:\ttrain: [0.125562392578125, tensor(0.9671)]\tvalid: [0.2078744384765625, tensor(0.9554)]\n"
+     ]
+    }
+   ],
+   "source": [
+    "run.fit(epochs=10, learner=learner)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 197,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(0.2078744384765625, tensor(0.9554))"
+      ]
+     },
+     "execution_count": 197,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "loss, acc = stats_callback.valid_stats.avg_stats\n",
+    "assert acc > 0.9\n",
+    "loss, acc"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 198,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#export\n",
+    "from functools import partial"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 199,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "acc_cbf = partial(AvgStatsCallback, accuracy)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 200,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "run = Runner(cb_funcs=acc_cbf)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 201,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "epoch=[1/10]:\ttrain: [0.118866552734375, tensor(0.9687)]\tvalid: [0.2063460693359375, tensor(0.9603)]\n",
+      "epoch=[2/10]:\ttrain: [0.118847275390625, tensor(0.9684)]\tvalid: [0.1939995849609375, tensor(0.9649)]\n",
+      "epoch=[3/10]:\ttrain: [0.1194039453125, tensor(0.9700)]\tvalid: [0.1944792724609375, tensor(0.9600)]\n",
+      "epoch=[4/10]:\ttrain: [0.110375224609375, tensor(0.9716)]\tvalid: [0.2286935791015625, tensor(0.9639)]\n",
+      "epoch=[5/10]:\ttrain: [0.117085712890625, tensor(0.9720)]\tvalid: [0.216303955078125, tensor(0.9606)]\n",
+      "epoch=[6/10]:\ttrain: [0.116471416015625, tensor(0.9708)]\tvalid: [0.2146708984375, tensor(0.9613)]\n",
+      "epoch=[7/10]:\ttrain: [0.104412548828125, tensor(0.9744)]\tvalid: [0.2509157958984375, tensor(0.9538)]\n",
+      "epoch=[8/10]:\ttrain: [0.106003193359375, tensor(0.9743)]\tvalid: [0.2588849609375, tensor(0.9550)]\n",
+      "epoch=[9/10]:\ttrain: [0.110430322265625, tensor(0.9735)]\tvalid: [0.229987744140625, tensor(0.9618)]\n",
+      "epoch=[10/10]:\ttrain: [0.105829072265625, tensor(0.9741)]\tvalid: [0.2536258544921875, tensor(0.9582)]\n"
+     ]
+    }
+   ],
+   "source": [
+    "run.fit(epochs=10, learner=learner)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 202,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[0.2536258544921875, tensor(0.9582)]"
+      ]
+     },
+     "execution_count": 202,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "run.avg_stats.valid_stats.avg_stats"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Export"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 203,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Traceback (most recent call last):\r\n",
+      "  File \"notebook_to_script.py\", line 2, in <module>\r\n",
+      "    import fire\r\n",
+      "ModuleNotFoundError: No module named 'fire'\r\n"
+     ]
+    }
+   ],
+   "source": [
+    "!python notebook_to_script.py imflash217__02_callbacks.ipynb"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 204,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "/home/potter217/anaconda3/bin/python\r\n"
+     ]
+    }
+   ],
+   "source": [
+    "!cond"
    ]
   },
   {
