flashai DEV: Runner(), AvgStatsCallback(): Whole training pipeline FINISHED

--- a/src/flashai/imflash217__02_callbacks.ipynb
+++ b/src/flashai/imflash217__02_callbacks.ipynb
@@ -940,39 +940,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 203,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Traceback (most recent call last):\r\n",
-      "  File \"notebook_to_script.py\", line 2, in <module>\r\n",
-      "    import fire\r\n",
-      "ModuleNotFoundError: No module named 'fire'\r\n"
+      "Converted imflash217__02_callbacks.ipynb to exp/nb_02_callbacks.py\r\n",
+      "Converted imflash217__02_callbacks.ipynb to exp/nb_02_callbacks.py\r\n",
+      "Converted imflash217__02_callbacks.ipynb to exp/nb_02_callbacks.py\r\n",
+      "Converted imflash217__02_callbacks.ipynb to exp/nb_02_callbacks.py\r\n",
+      "Converted imflash217__02_callbacks.ipynb to exp/nb_02_callbacks.py\r\n",
+      "Converted imflash217__02_callbacks.ipynb to exp/nb_02_callbacks.py\r\n",
+      "Converted imflash217__02_callbacks.ipynb to exp/nb_02_callbacks.py\r\n",
+      "Converted imflash217__02_callbacks.ipynb to exp/nb_02_callbacks.py\r\n",
+      "Converted imflash217__02_callbacks.ipynb to exp/nb_02_callbacks.py\r\n",
+      "Converted imflash217__02_callbacks.ipynb to exp/nb_02_callbacks.py\r\n",
+      "Converted imflash217__02_callbacks.ipynb to exp/nb_02_callbacks.py\r\n"
      ]
     }
    ],
    "source": [
     "!python notebook_to_script.py imflash217__02_callbacks.ipynb"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 204,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "/home/potter217/anaconda3/bin/python\r\n"
-     ]
-    }
-   ],
-   "source": [
-    "!cond"
    ]
   },
   {
